--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2018"
 lalrpop = "0.19.7"
 
 [dependencies]
+libc = "0.2"
 lazy_static = "1.4.0"
 lalrpop-util = { version = "0.19.7", features = ["lexer"] }
